Fazendo ajustes nos testes e melhorando covarage